added baseline for svr and initial predcitions

--- a/data_preparation + PCA.ipynb
+++ b/data_preparation + PCA.ipynb
@@ -575,8 +575,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM with all features and with carefully selected features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def mse(real, pred):\n",
+    "    return np.mean(np.square(real-pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVR \n",
+    "\n",
+    "svr = SVR()\n",
+    "svr.fit(train_norm_data, train_labels)\n",
+    "\n",
+    "preds = svr.predict(normalize_data(val_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -584,41 +619,154 @@
     {
      "data": {
       "text/plain": [
-       "array([11.33031282,  7.37219333,  4.77314795,  4.25276608,  3.50091281,\n",
-       "        3.31723951,  2.9904961 ,  2.73603025,  2.39374272,  2.28228006,\n",
-       "        2.24621964,  1.99936513,  1.91836558,  1.84936539,  1.79676508,\n",
-       "        1.68272391,  1.60651756,  1.59279407,  1.50044333,  1.47795551,\n",
-       "        1.42721818,  1.37914278,  1.37641115,  1.29383661,  1.26597807,\n",
-       "        1.25703289,  1.23299397,  1.19006715,  1.16218893,  1.11217269,\n",
-       "        1.09686987,  1.0725892 ,  1.04843543,  1.02946049,  0.99371654,\n",
-       "        0.98073727,  0.96905556,  0.94776612,  0.93853954,  0.92239079,\n",
-       "        0.90996842,  0.90312033,  0.8832063 ,  0.85706255,  0.85376879,\n",
-       "        0.83611593,  0.82521183,  0.81908597,  0.79857794,  0.77266226,\n",
-       "        0.76433473,  0.76223275,  0.75400706,  0.72920296,  0.7179587 ,\n",
-       "        0.7094479 ,  0.68788241,  0.67414351,  0.670568  ,  0.65138221,\n",
-       "        0.64983981,  0.64258906,  0.62721082,  0.62597003,  0.61245391,\n",
-       "        0.60565671,  0.6012953 ,  0.57165121,  0.56708944,  0.56400978,\n",
-       "        0.55213812,  0.53570385,  0.53373638,  0.51795146,  0.51191174,\n",
-       "        0.50028926,  0.49606611,  0.49104709,  0.48458409,  0.47935042,\n",
-       "        0.46370402,  0.46180409,  0.45491283,  0.43923566,  0.4282053 ,\n",
-       "        0.41422699,  0.40383703,  0.39942278,  0.39685384,  0.38798473,\n",
-       "        0.38236435,  0.37008125,  0.35600838,  0.32744606,  0.31216851,\n",
-       "        0.30772986,  0.30200502,  0.28539455,  0.2688813 ,  0.26664384,\n",
-       "        0.2613188 ,  0.2563288 ,  0.24120539,  0.23159397,  0.227975  ,\n",
-       "        0.22022632,  0.20199674,  0.19718073,  0.18976643,  0.17758922,\n",
-       "        0.16245816,  0.15713048,  0.14639188,  0.14250757,  0.12855295,\n",
-       "        0.12615507,  0.10938353,  0.09318802,  0.08278829,  0.0523038 ,\n",
-       "        0.03559138,  0.03144715,  0.0312847 ])"
+       "73.37395659208052"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "variances"
+    "mse(preds, val_labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.025847163151464292"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svr.score(normalize_data(val_data), val_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160.23103613510037"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#random baseline\n",
+    "random_labels = np.random.normal(np.mean(train_labels), np.std(train_labels), len(val_labels))\n",
+    "mse(random_labels, val_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71.83710478844854"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#majority baseline\n",
+    "majority_labels = [np.mean(train_labels) for x in range(len(val_labels))]\n",
+    "mse(majority_labels, val_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([  1.,   5.,  17.,  47.,  75., 128.,  83.,  38.,  15.,   6.]),\n",
+       " array([-30.813748  , -25.29375309, -19.77375818, -14.25376328,\n",
+       "         -8.73376837,  -3.21377346,   2.30622145,   7.82621635,\n",
+       "         13.34621126,  18.86620617,  24.38620108]),\n",
+       " <a list of 10 Patch objects>)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEACAYAAAC9Gb03AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEehJREFUeJzt3X+sZGV9x/H3B1YQRRBs4LYssiAVVltF0lBTTTqRCqgJ\n8IdBtDWArf/QqmmMdRdN96Zp6o+kMSaNTRqp2TQiRY1haRGQLNOGtIAtIMguuI3lh1iuaaM0aDEg\n3/4xZ3G8e9ndO3Pv/Hj2/UomnPPMnHm+Z5n5zHOfc+ZMqgpJUrsOm3YBkqT1ZdBLUuMMeklqnEEv\nSY0z6CWpcQa9JDXugEGf5OokS0nuW+G+Dyd5LsnxQ21bk+xJsjvJeWtdsCRpdQ5mRP8F4PzljUk2\nAm8FHhlq2wxcAmwG3gZ8LknWplRJ0igOGPRVdTvwwxXu+gzwkWVtFwHXVtWzVfUwsAc4Z9wiJUmj\nG2mOPsmFwGNVdf+yu04CHhtaf7xrkyRNyYbVbpDkKOAqBtM2kqQZt+qgB14FbAK+1c2/bwTuTnIO\ngxH8K4ceu7Fr20cSL7IjSSOoqlUd+zzYqZt0N6rq21W1UFWnVdWpwPeAN1TVD4AdwLuSHJHkVOB0\n4K79FDu3t23btk29Buuffh2HYv3zXHsL9Y/iYE6vvAb4F+DVSR5NcsXyvB76ENgFXAfsAm4ErqxR\nK5MkrYkDTt1U1XsOcP9py9Y/AXxizLokSWvEb8aOqNfrTbuEsVj/dM1z/fNcO8x//aPItGZWkjir\nI0mrlIRap4OxkqQ5ZdBLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJ\napxBL0mNM+glqXEGvTSChYVNJJnIbWFh07R3V3POyxRLIxj8XPKkXr8Z+Sfk1B4vUyxJ2odBL0mN\nM+glqXEGvSQ1zqCXpMYZ9JLUuAMGfZKrkywluW+o7dNJdie5N8lXkxwzdN/WJHu6+89br8IlSQfn\nYEb0XwDOX9Z2C/DaqjoL2ANsBUjyGuASYDPwNuBzGZxwLEmakgMGfVXdDvxwWdutVfVct3oHsLFb\nvhC4tqqeraqHGXwInLN25UqSVmst5ujfB9zYLZ8EPDZ03+NdmyRpSjaMs3GSjwHPVNWXRtl+cXHx\n+eVer0ev1xunHElqTr/fp9/vj/UcB3WtmySnADdU1euG2i4H3g+8pap+2rVtAaqqPtWt3wRsq6o7\nV3hOr3WjueW1bjQt63mtm3S3vR1dAHwEuHBvyHd2AJcmOSLJqcDpwF2rKUiStLYOOHWT5BqgB7wi\nyaPANuAq4AjgG91JNXdU1ZVVtSvJdcAu4BngSoftkjRdXqZYGoFTN5oWL1MsSdqHQS9JjTPoJalx\nBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQ\nS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhp3wKBPcnWSpST3DbUdl+SWJA8luTnJ\nsUP3bU2yJ8nuJOetV+GSpINzMCP6LwDnL2vbAtxaVWcAO4GtAEleA1wCbAbeBnwuSdauXEnSah0w\n6KvqduCHy5ovArZ3y9uBi7vlC4Frq+rZqnoY2AOcszalSpJGMeoc/QlVtQRQVU8AJ3TtJwGPDT3u\n8a5NkjQlG9boeWqUjRYXF59f7vV69Hq9NSpHktrQ7/fp9/tjPUeqDpzRSU4Bbqiq13Xru4FeVS0l\nWQBuq6rNSbYAVVWf6h53E7Ctqu5c4TnrYPqWZtHg0NOkXr/B94r2SkJVrerY58FO3aS77bUDuLxb\nvgy4fqj90iRHJDkVOB24azUFSZLW1gGnbpJcA/SAVyR5FNgGfBL4cpL3AY8wONOGqtqV5DpgF/AM\ncKXDdkmaroOaulmXjp260Rxz6kbTsp5TN5KkOWXQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ\n9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEv\nSY0z6CWpcQa9JDXOoJdm3pEkWffbwsKmae+o1kmqavSNkz8Gfh94DrgfuAJ4KfD3wCnAw8AlVfXk\nCtvWOH1L05QEmNTrd1J9Bd+Tsy8JVZXVbDPyiD7JrwAfAM6uqtcBG4B3A1uAW6vqDGAnsHXUPiRJ\n4xt36uZw4KVJNgBHAY8DFwHbu/u3AxeP2YckaQwjB31VfR/4S+BRBgH/ZFXdCpxYVUvdY54ATliL\nQiVJo9kw6oZJXs5g9H4K8CTw5SS/y76TiS846be4uPj8cq/Xo9frjVqOJDWp3+/T7/fHeo6RD8Ym\neSdwflW9v1t/L/BG4C1Ar6qWkiwAt1XV5hW292Cs5pYHYzUtEz0Yy2DK5o1JXpzBq/5cYBewA7i8\ne8xlwPVj9CFJGtO4p1duAy4FngHuAf4AeBlwHXAy8AiD0yt/tMK2jug1txzRa1pGGdGPFfTjMOg1\nzwx6Tcukp24kSXPAoJekxhn0ktQ4g15NWVjYNJELgEnzxIOxasrkDpJ6MFbT4cFYSdI+DHpJapxB\nL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS\n1DiDXpIaZ9BLUuMMeklq3FhBn+TYJF9OsjvJA0l+M8lxSW5J8lCSm5Mcu1bFSpJWb9wR/WeBG6tq\nM/B64EFgC3BrVZ0B7AS2jtmHJGkMI/84eJJjgHuq6lXL2h8EfruqlpIsAP2qOnOF7f1xcK05fxx8\nvH58T86+Sf84+KnAfyf5QpK7k/xNkpcAJ1bVEkBVPQGcMEYfkqQxbRhz27OBP6yqf0vyGQbTNsuH\nBC84RFhcXHx+udfr0ev1xihHktrT7/fp9/tjPcc4UzcnAv9aVad1629mEPSvAnpDUze3dXP4y7d3\n6kZrzqmb8frxPTn7Jjp1003PPJbk1V3TucADwA7g8q7tMuD6UfuQJI1v5BE9QJLXA58HXgR8F7gC\nOBy4DjgZeAS4pKp+tMK2jui15hzRj9eP78nZN8qIfqygH4dBr/Vg0I/Xj+/J2Tfps24kSXPAoJek\nxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqc\nQS9JjTPoJalx4/w4uHRQFhY2sbT0yLTLkA5Z/sKU1t3kfvUJJvlrTC3uk+/J2ecvTEmS9mHQS1Lj\nDHpJapxBL0mNM+glqXFjB32Sw5LcnWRHt35ckluSPJTk5iTHjl+mJGlUazGi/xCwa2h9C3BrVZ0B\n7AS2rkEfkqQRjRX0STYCbwc+P9R8EbC9W94OXDxOH5Kk8Yw7ov8M8BF+8dscJ1bVEkBVPQGcMGYf\nkqQxjHwJhCTvAJaq6t4kvf089AW/are4uPj8cq/Xo9fb39NI0qGn3+/T7/fHeo6RL4GQ5C+A3wOe\nBY4CXgZ8DfgNoFdVS0kWgNuqavMK23sJhEOEl0CYl768BMI8mOglEKrqqqp6ZVWdBlwK7Kyq9wI3\nAJd3D7sMuH7UPiRJ41uP8+g/Cbw1yUPAud26pJl3JEnW/bawsGnaO3rI8eqVWndO3cxLX04RzQOv\nXilJ2odBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6g\nl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGjdy0CfZmGRn\nkgeS3J/kg137cUluSfJQkpuTHLt25UqSVitVNdqGyQKwUFX3Jjka+HfgIuAK4H+q6tNJPgocV1Vb\nVti+Ru1b8yUJMKn/15Pqy30apx/f+6NLQlVlNduMPKKvqieq6t5u+SlgN7CRQdhv7x62Hbh41D4k\nSeNbkzn6JJuAs4A7gBOragkGHwbACWvRhyRpNBvGfYJu2uYrwIeq6qkky/8me8G/0RYXF59f7vV6\n9Hq9ccuRpKb0+336/f5YzzHyHD1Akg3APwBfr6rPdm27gV5VLXXz+LdV1eYVtnWO/hDhHP289OUc\n/TyY6Bx952+BXXtDvrMDuLxbvgy4fsw+JEljGOesmzcB/wzcz2AYUMBVwF3AdcDJwCPAJVX1oxW2\nd0R/iHBEPy99OaKfB6OM6MeauhmHQX/oMOjnpS+Dfh5MY+pGc2xhYRNJ1v0maboc0R/CJjfSdvQ7\nH305op8HjuglSfsw6CVN2JETmTJMwsLCpmnv7Exw6uYQ5tTNPPQzyb5a62fQV2s549SNJGkfBr0k\nNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g15SwyZzpcxZ\nv0qmV688hHn1ynnoZ5J9tdbPJPua3FUyvXplI/yJP0lryRH9DGpvpN3mCM59mvV+JtmXI3pJ0hSt\nW9AnuSDJg0m+k+Sj69WPJGn/1iXokxwG/BVwPvBa4N1JzlyPvqal3+9Pu4Qx9addwJj60y5gTP1p\nFzCG/rQLGFN/2gVM3IZ1et5zgD1V9QhAkmuBi4AH16m/dVVV7Ny5k6effvr5ti9+8Yv8+Mc/XvO+\njjnmmDV/zpX1J9TPeukDvSnXMI4+81t/n/mtHea//tVbr6A/CXhsaP17DMJ/Lt1555284x3v5MUv\n/q3n255++jvceOOTa97XT37yT2v+nJIObesV9A0KVT+f6ar6xXVJmlXrcnplkjcCi1V1Qbe+Baiq\n+tTQYzy3UpJGsNrTK9cr6A8HHgLOBf4LuAt4d1XtXvPOJEn7tS5TN1X1syR/BNzC4Myeqw15SZqO\nqX0zVpI0GVM7mpjkw0meS3L8UNvWJHuS7E5y3rRq258kf5bkW0nuSXJTkoWh++ah/k939d2b5KtJ\njhm6b6brT/LOJN9O8rMkZy+7b6Zr32vevkiY5OokS0nuG2o7LsktSR5KcnOSY6dZ4/4k2ZhkZ5IH\nktyf5INd+8zvQ5Ijk9zZZc39SbZ17auvvaomfgM2AjcB/wkc37VtBu5hMJ20CfgPur84ZukGHD20\n/AHgr7vl18xJ/b8DHNYtfxL4xLzUD5wB/CqwEzh7qH1eXjuHdbWdArwIuBc4c9p1HaDmNwNnAfcN\ntX0K+JNu+aPAJ6dd537qXwDO6paPZnDs8Mx52QfgJd1/DwfuYHCa+qprn9aI/jPAR5a1XQRcW1XP\nVtXDwB5m8Nz7qnpqaPWlwHPd8oXMR/23VtXemu9g8KELc1B/VT1UVXsYXKlq2Fy8dhj6ImFVPQPs\n/SLhzKqq24EfLmu+CNjeLW8HLp5oUatQVU9U1b3d8lPAbgav+bnYh6r6Sbd4JIOBTDFC7RMP+iQX\nAo9V1f3L7lr+JavHu7aZk+TPkzwKvAf40655buof8j7gxm55Huvfa15qX+mLhLNY54GcUFVLMAhS\n4IQp13NQkmxi8NfJHcCJ87APSQ5Lcg/wBPCNqvomI9S+LmfdJPkGcOJwE4NPoo8DVwFvXY9+18p+\n6v9YVd1QVR8HPt7NsX4AWJx8lS/sQPV3j/kY8ExVfWkKJb6gg6ldM2fmz+hIcjTwFeBDVfXUCt/j\nmcl96P76fkN3LO1rSV7LvrUesPb1Or1yxSBP8msM5lC/lcFF1zcCdyc5h8Eo7JVDD9/YtU3cC9W/\ngmuAf2QQ9I8DJw/dN7P1J7kceDvwlqHmmah/Ff/2w2ai9oMwM6/xMS0lObGqlrqTEX4w7YL2J8kG\nBiH/d1V1fdc8V/tQVf+bpA9cwAi1T3Tqpqq+XVULVXVaVZ3K4E/XN1TVD4AdwLuSHJHkVOB0Bl+0\nmilJTh9avZifX6htB3DpHNR/AYPjIxdW1U+H7pqL+ocMz9PPS+3fBE5PckqSI4BLGdQ+68K+/96X\nd8uXAdcv32DG/C2wq6o+O9Q28/uQ5Jf2nlGT5CgGMyG7GaX2KR9R/i7dWTfd+lYGZyXsBs6b9hHv\nF6j5K8B9DM6YuB745Tmrfw/wCHB3d/vcvNTP4IP1MeD/GHzj+uvzUvtQnRcwOPNjD7Bl2vUcRL3X\nAN8Hfgo8ClwBHAfc2u3HLcDLp13nfup/E/Cz7v16T/eavwA4ftb3Afj1rt57u8z5WNe+6tr9wpQk\nNc7LL0pS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIa9/+Edx+brjb/tAAAAABJRU5E\nrkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x12aca6198>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([   4.,   21.,   82.,  277.,  605., 1046.,  974.,  530.,  177.,\n",
+       "          23.]), array([-38.78688705, -32.0964598 , -25.40603256, -18.71560531,\n",
+       "        -12.02517807,  -5.33475082,   1.35567642,   8.04610367,\n",
+       "         14.73653091,  21.42695816,  28.1173854 ]), <a list of 10 Patch objects>)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYEAAAEACAYAAABVtcpZAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEqhJREFUeJzt3X+s3Xd93/HnK0kTaIHUdIrvZtM4LAQcikqj1SC1k45g\nC4FJtv+osrRbRwjaP6EFbROLDWi2pmlgpIl2moJUjaWmCk0NpYpRs8SxwtGEtJCsJE3AJtyqteO4\n80VtGRPaxJzw3h/nSzi6+Pree47v/Z7jz/MhHfl7Puf7PZ/3tc75vs738/2VqkKS1KYr+i5AktQf\nQ0CSGmYISFLDDAFJapghIEkNMwQkqWGrhkCSzyRZSvLMWNsnk5xM8nSSP0zymrHX9idZ7F6/daz9\nliTPJPlWkt+69H+KJGm91rIlcB/wrmVtx4A3V9VbgUVgP0CSm4HbgZ3Au4F7k6Rb5tPA+6vqJuCm\nJMvfU5K0yVYNgar6CvCdZW3Hq+oH3dPHge3d9G7ggap6sapOMQqIXUkWgFdX1ZPdfJ8F9l6C+iVJ\nU7gU+wTuAh7qprcBZ8ZeO9u1bQNeGGt/oWuTJPVoqhBI8lHgfFX9/iWqR5K0ia6adMEkdwLvAd4x\n1nwWeN3Y8+1d20rtK723FzSSpAlUVVaf60fWuiWQ7jF6ktwGfBjYXVXfH5vvKHBHkquT3ADcCDxR\nVeeA7ybZ1e0o/mfAgxfrsKrm9nHgwIHea2ixduvv/2H9/T4mseqWQJLPAQPgZ5I8DxwAPgJcDTza\nHfzzeFXdXVUnkhwBTgDngbvrR5V9APhd4BXAQ1X18EQVS5IumVVDoKp+7QLN911k/o8DH79A+58A\nb1lXdZKkDeUZwxtgMBj0XcLE5rl2sP6+Wf/8yaTjSBspSc1iXZI0y5JQG7RjWJJ0GTIEJKlhhoAk\nNcwQkKSGGQKS1DBDQJIaZghIUsMMAUlqmCEgSQ0zBCSpYYaAJDXMEJCkhhkCktQwQ0CSGmYISFLD\nDAFJapghIEkNMwQkqWGGgCQ1zBCQpIYZApLUMENAkhpmCEhrsLCwgyS9PRYWdvT9X6DLVKqq7xp+\nTJKaxbrUriRAn5/J4HdCq0lCVWU9y7glIEkNMwQkqWGrhkCSzyRZSvLMWNuWJMeSPJfkkSTXjr22\nP8likpNJbh1rvyXJM0m+leS3Lv2fIklar7VsCdwHvGtZ2z7geFW9EXgM2A+Q5GbgdmAn8G7g3owG\nUwE+Dby/qm4Cbkqy/D0lSZts1RCoqq8A31nWvAc43E0fBvZ207uBB6rqxao6BSwCu5IsAK+uqie7\n+T47towkqSeT7hO4rqqWAKrqHHBd174NODM239mubRvwwlj7C12bJKlHl2rHsMeuSdIcumrC5ZaS\nbK2qpW6o59td+1ngdWPzbe/aVmpf0cGDB1+eHgwGDAaDCUuVpMvTcDhkOBxO9R5rOlksyQ7gS1X1\nlu75IeBvqupQknuALVW1r9sxfD/wNkbDPY8Cb6iqSvI48EHgSeCPgf9YVQ+v0J8ni2mmeLKY5sEk\nJ4utuiWQ5HPAAPiZJM8DB4BPAJ9PchdwmtERQVTViSRHgBPAeeDusbX5B4DfBV4BPLRSAEiSNo+X\njZDWwC0BzQMvGyFJWpdJdwxL2lTX8KPzLjff1q3Xc+7cqd7618ZxOEhag1kYDuq7f7+Ts8/hIEnS\nuhgCktQwQ0CSGmYISFLDDAFJapghIEkNMwQkqWGGgCQ1zBCQpIYZApLUMENAkhpmCEhSwwwBSWqY\nISBJDTMEJKlhhoAkNcwQkKSGGQKS1DBDQJIaZghIUsMMAUlqmCEgSQ0zBCSpYYaAJDXMEJCkhhkC\nktSwqUIgyb9I8vUkzyS5P8nVSbYkOZbkuSSPJLl2bP79SRaTnExy6/TlS5KmkaqabMHk7wBfAd5U\nVf8vyR8ADwE3A39dVZ9Mcg+wpar2JbkZuB/4RWA7cBx4Q12ggCQXapZ6kwTo8zPZf/9+J2dfEqoq\n61lm2uGgK4GfSnIV8ErgLLAHONy9fhjY203vBh6oqher6hSwCOyasn9J0hQmDoGq+kvgPwDPM1r5\nf7eqjgNbq2qpm+cccF23yDbgzNhbnO3aJEk9uWrSBZP8NKNf/dcD3wU+n+Sf8OPbrBNtQx48ePDl\n6cFgwGAwmKhOSbpcDYdDhsPhVO8xzT6BXwHeVVX/vHv+68DbgXcAg6paSrIAfLmqdibZB1RVHerm\nfxg4UFVfvcB7u09AM8V9Au4TmAebvU/geeDtSV6R0TfkncAJ4ChwZzfPe4EHu+mjwB3dEUQ3ADcC\nT0zRvyRpShMPB1XVE0m+ADwFnO/+/R3g1cCRJHcBp4Hbu/lPJDnCKCjOA3f7c1+S+jXxcNBGcjhI\ns8bhIIeD5kEfh4hKkuaYISBJDTMEJKlhhoAkNcwQkKSGGQKS1DBDQJIaZghIUsMMAUlqmCEgSQ0z\nBCSpYYaAJDXMEJCkhhkCktQwQ0CSGmYISFLDDAFJapghIEkNMwQkqWGGgCQ1zBCQpIYZApLUMENA\nkhpmCEhSwwwBSWqYISBJDTMEJKlhhoAkNWyqEEhybZLPJzmZ5BtJ3pZkS5JjSZ5L8kiSa8fm359k\nsZv/1unLlyRNY9otgd8GHqqqncDPA98E9gHHq+qNwGPAfoAkNwO3AzuBdwP3JsmU/UuSpjBxCCR5\nDfD3q+o+gKp6saq+C+wBDnezHQb2dtO7gQe6+U4Bi8CuSfuXJE1vmi2BG4C/SnJfkq8l+Z0kPwls\nraolgKo6B1zXzb8NODO2/NmuTVrVwsIOkvT2kC5XV0257C3AB6rqfyT5FKOhoFo23/Lna3Lw4MGX\npweDAYPBYLIqdVlYWjrNhB+lS8Qg0OwZDocMh8Op3iNVk32xkmwF/ntVvb57/suMQuDvAoOqWkqy\nAHy5qnYm2QdUVR3q5n8YOFBVX73Ae9ekdenyNPo13ncItN2/38nZl4SqWtcvlomHg7ohnzNJbuqa\n3gl8AzgK3Nm1vRd4sJs+CtyR5OokNwA3Ak9M2r8kaXrTDAcBfBC4P8lPAH8OvA+4EjiS5C7gNKMj\ngqiqE0mOACeA88Dd/tyXpH5NPBy0kRwO0nIOB/Xfv9/J2bepw0GSpPlnCEhSwwwBSWqYISBJDTME\nJKlhhoAkNcwQkKSGGQKS1LBpzxiW1IRrer2a6tat13Pu3Kne+r+cecaw5oJnDNu/64TVecawJGld\nDAFJapghIEkNMwQkqWGGgCQ1zBCQpIYZApLUMENAkhpmCEhSwwwBSWqYISBJDTMEJKlhhoAkNcwQ\nkKSGGQKS1DBDQJIaZghIUsMMAUlq2NQhkOSKJF9LcrR7viXJsSTPJXkkybVj8+5PspjkZJJbp+1b\nkjSdS7El8CHgxNjzfcDxqnoj8BiwHyDJzcDtwE7g3cC96fPO1ZKk6UIgyXbgPcB/HmveAxzupg8D\ne7vp3cADVfViVZ0CFoFd0/QvSZrOtFsCnwI+DNRY29aqWgKoqnPAdV37NuDM2HxnuzZJUk+umnTB\nJP8IWKqqp5MMLjJrXeS1FR08ePDl6cFgwGBwsS4kqT3D4ZDhcDjVe6RqonU0Sf498E+BF4FXAq8G\n/gj4e8CgqpaSLABfrqqdSfYBVVWHuuUfBg5U1Vcv8N41aV26PI12H/X5mbD/vvt3nbC6JFTVuva1\nTjwcVFUfqaqfrarXA3cAj1XVrwNfAu7sZnsv8GA3fRS4I8nVSW4AbgSemLR/SdL0Jh4OuohPAEeS\n3AWcZnREEFV1IskRRkcSnQfu9ue+JPVr4uGgjeRwkJZzOMj+XSesblOHgyRJ888QkKSGGQKS1DBD\nQJIaZghIUsMMAUlqmCEgSQ0zBCSpYYaAJDXMEJCkhhkCktQwQ0CSGmYISFLDDAFJapghIEkNMwQk\nqWGGgCQ1zBCQpIZtxD2GdZlaWNjB0tLpvsuQdAl5j2GtWb/3+e3/Hrf27z2GZ533GJYkrYshIEkN\nMwQkqWGGgCQ1zBCQpIYZApLUMENAkhpmCEhSwyYOgSTbkzyW5BtJnk3ywa59S5JjSZ5L8kiSa8eW\n2Z9kMcnJJLdeij9AkjS5ic8YTrIALFTV00leBfwJsAd4H/DXVfXJJPcAW6pqX5KbgfuBXwS2A8eB\nN1zo1GDPGJ5NnjFs/3327zphdZt6xnBVnauqp7vp7wEnGa3c9wCHu9kOA3u76d3AA1X1YlWdAhaB\nXZP2L0ma3iXZJ5BkB/BW4HFga1UtwSgogOu62bYBZ8YWO9u1SZJ6MnUIdENBXwA+1G0RLN9mcxtO\nkmbUVJeSTnIVowD4vap6sGteSrK1qpa6/Qbf7trPAq8bW3x713ZBBw8efHl6MBgwGAymKVWSLjvD\n4ZDhcDjVe0x1KekknwX+qqr+5VjbIeBvqurQCjuG38ZoGOhR3DE8V9wxbP999u86YXWT7Bie5uig\nXwL+G/Aso09HAR8BngCOMPrVfxq4var+V7fMfuD9wHlGw0fHVnhvQ2AGGQL232f/rhNWt6khsJEM\ngdlkCNh/n/27TljdJCHg7SUlzYFruh8h/di69XrOnTvVW/8byS0BrZlbAvbfcv/zsE7y9pKSpHUx\nBCSpYYaAJDXMEJCkhhkCktQwQ0CSGmYISFLDDAFJapghIEkNMwQkqWGGgCQ1zBCQpIYZApLUMENA\nkhpmCEhSwwwBSWqYdxabIwsLO1haOt13GZIuI95ZbI70e2cv6PfuTi3/7fY/C/3PwzrJO4tJktbF\nEJCkhhkCktQwQ0CSGmYISFLDDAFJapghIEkNMwQkqWGbHgJJbkvyzSTfSnLPZvcvSfqRTQ2BJFcA\n/wl4F/Bm4FeTvGkza5jGwsIOkvT22BzDTepnowz7LmBKw74LmNKw7wKmNFyh/Zpev/sLCzs27C/e\n7C2BXcBiVZ2uqvPAA8CeTa5hYqPr9tQaHgfWON96H5thuEn9bJRh3wVMadh3AVMa9l3AlIYrtH+f\njflOr+2xkdcM2+wLyG0Dzow9f4FRMKzqi1/8IqdOndqImtbk+uuv761vSdooc3MV0dtvv4OXXjrf\nW/9XXjk3/1WStGabehXRJG8HDlbVbd3zfUBV1aFl883+5fokaQat9yqimx0CVwLPAe8E/ifwBPCr\nVXVy04qQJL1sU8c4quqlJL8BHGO0U/ozBoAk9WcmbyojSdocM3fGcJJ/leQHSV471rY/yWKSk0lu\n7bO+lST5t0n+NMlTSR5OsjD22jzU/8muvqeT/GGS14y9Ng/1/0qSryd5Kckty16bh/rn7iTKJJ9J\nspTkmbG2LUmOJXkuySNJru2zxpUk2Z7ksSTfSPJskg927fNS/zVJvtqtb55NcqBrX3/9VTUzD2A7\n8DDwF8Bru7adwFOMhq52AH9GtwUzSw/gVWPTvwl8upu+eU7q/wfAFd30J4CPz1n9bwTeADwG3DLW\nPvOfH0Y/xv4MuB74CeBp4E1917WGun8ZeCvwzFjbIeBfd9P3AJ/ou84Val8A3tpNv4rRvso3zUv9\nXX0/2f17JfA4o8Pt113/rG0JfAr48LK2PcADVfViVZ0CFlnjuQWbqaq+N/b0p4AfdNO7mY/6j1fV\nD2t+nFEgw/zU/1xVLTK6Ge24efj8zOVJlFX1FeA7y5r3AIe76cPA3k0tao2q6lxVPd1Nfw84yegz\nPxf1A1TV/+kmr2H0I6eYoP6ZCYEku4EzVfXsspeWn2B2tmubOUn+XZLngV8D/k3XPDf1j7kLeKib\nnsf6x81D/Rc6iXLWalyr66pqCUYrWuC6nutZVZIdjLZoHge2zkv9Sa5I8hRwDni0qp5kgvo39eig\nJI8CW8ebGKXXx4CPAP9wM+tZr4vU/9Gq+lJVfQz4WDem+5vAwc2vcmWr1d/N81HgfFX9fg8lXtRa\n6tfMmekjT5K8CvgC8KGq+t4FzlGa2fq7Lfdf6Pbf/VGSN/Pj9a5a/2YfInrBlXySn2M0XvunGV0p\nbTvwtSS7GP1y+9mx2bd3bZtupfov4HPAHzMKgbPA68Zem9n6k9wJvAd4x1jz3NS/gpmp/yJm5jN+\nCSwl2VpVS93BEd/uu6CVJLmKUQD8XlU92DXPTf0/VFX/O8kQuI0J6p+J4aCq+npVLVTV66vqBkab\nw79QVd8GjgL/OMnVSW4AbmR0ktlMSXLj2NO9wDe76aPAHXNQ/22M9sfsrqrvj700F/UvM75fYB7q\nfxK4Mcn1Sa4G7mBU9zwIP/7/fWc3/V7gweULzJD/Apyoqt8ea5uL+pP8rR8e+ZPklYxGUU4ySf19\n7+FeYa/3n9MdHdQ938/o6ImTwK1917dCzV8AnmF0ZMeDwN+es/oXgdPA17rHvXNW/15G4+r/l9HZ\n6P91zuq/jdERKovAvr7rWWPNnwP+ktElNp8H3gdsAY53f8sx4Kf7rnOF2n8JeKn7vj7VfeZvA147\nJ/W/pav56W6989Gufd31e7KYJDVsJoaDJEn9MAQkqWGGgCQ1zBCQpIYZApLUMENAkhpmCEhSwwwB\nSWrY/wcRcJdfnwYGTAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x12a78e400>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
