--- a/data_preparation + PCA.ipynb
+++ b/data_preparation + PCA.ipynb
@@ -293,7 +293,7 @@
     "\n",
     "extra_dfs = [means_train, means_val, std_train, std_val, entropy_train, entropy_val]\n",
     "for df in extra_dfs:\n",
-    "    df.index.name = 'subjectkey'\n"
+    "    df.columns = 'subjectkey'\n"
    ]
   },
   {
